service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sidecar-service
spec:
  selector:
    app: sidecar
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
